--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,9 @@
 body{
 background-color: #2c2c2c;
 }
-*{
-transition: 1s ease;
-}
+
+
+
 .carousel-caption {
     margin-top: 1%;
     margin-bottom: 35%;
@@ -62,10 +62,10 @@ transition: 1s ease;
 }
 
 .make {
-    height: auto;
+
     background-color: #167456;
-    float:left; 
-    z-index: 4;
+   
+
     opacity: 0.8;
 }
 
@@ -108,26 +108,26 @@ margin-top: 3%;
 
 
 .june {
-    height: 310px;
+    height: 350px;
     background-color: #D095AD;
 
 }
 
 .july {
-     height: 310px;
-    background-color: #FEFC3B;
+     height: 350px;
+    background-color: #B0E3D7;
 
 }
 
 .july1 {
-    height: 310px;
+    height: 350px;
     background: #ab86b9; /* Old browsers */
 
 
 }
 
 .july2 {
-    height: 310px;
+    height: 350px;
    background-color: #FB9FB1;
 
 }
