--- a/css/style.css
+++ b/css/style.css
@@ -2,8 +2,6 @@ body{
 background-color: #2c2c2c;
 }
 
-
-
 .carousel-caption {
     margin-top: 1%;
     margin-bottom: 35%;
@@ -19,8 +17,7 @@ background-color: #2c2c2c;
     height: 600px;
     width: 100%;
     opacity: 0.8;
-    z-index: 5;
-    padding-top: 14%;
+ padding-top: 14%;
   
     
     
@@ -77,7 +74,7 @@ background-color: #2c2c2c;
 }
 
 .pad{
-margin-top: 3%;
+margin-top: 5%;
 }
 
 .contact {
@@ -162,3 +159,12 @@ font-family: 'Ubuntu' , sans-serif;
 }
 
 
+
+li {
+    list-style-type: none;
+}
+
+#MnV {
+    padding-top: 10%;
+    z-index: inherit;
+}
